esturcutre and refactor Problem60 (Prime pair sets)
Now the solution takes 3.8 seconds instead of 80 minutes.